--- a/QuanLyPhongTro/Control/QuanLiDanCu.resx
+++ b/QuanLyPhongTro/Control/QuanLiDanCu.resx
@@ -117,4 +117,91 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="buttonLuuCD.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAOsAAADrASts18IAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAACmElEQVRYR72Xy27TQBSG5wUojwD05mwKT1EJNrAEsQC2IPEOFNiw4JI4oi0gEBcJJEBlAeUFgF6C
+        BFJCWbCjhbRFIAESEgrt4fz2DBmPj+NJZPNLX+TMmXPOn8k4zihJ4yFVRmp0brRGDWad2WaoT5CzPlaj
+        5ZEqnQ2uUKDLZ2t4lnaOVukGJ/6xChUFal5nhnS7pCqXaTcH3+nJZdLaU6ddum2s4ALt4EDTmVgm77Ha
+        ur1SetmliaUxFtJs1BwbjgcG+s4P3Sc6yEgxDzrDdRpX7OS8EMzl1DOKtM2cfCrP8WBK8QtuNSnYk5tv
+        YgMQrqU5HizBwBdn0ItblgFcS3M82ICBLWfQi4IMbMGAFMilIAPkbWDfTPJ9LwPu3F7kGqjUiRqf4ka3
+        3/L9q8clA4hhDoScgHPtWhK5BibvxgWNHrTiRq4BjCFma/KOXNMm10AQEi2s6opaaGQ+KYRrtzly+EdO
+        rGnjtQf2Tne/BqOfv/UFy76GMBc5Ui0X7004cTW9EpJefy5oE15aIJr/QLT/XncMJhbXdCdBbvMDnPuc
+        a1x81R1zEQ0ceaQrsl58TMYmeGklE9Inf8m5RocfJmMG0QAeLkYrm+m4ayJr2ZFrlPXAGsgAwCabbsRk
+        bbhSDfjgayD1MLINrP3o/vr1A3KQa5RhIHoYbTqDdPSxztJa/U7U3OgP5NhCTbcP01bsdNkNYEN9+6Uz
+        C9BXriXuk5AWFQ4NqQBz4kkxJlDj+Fy6fkSVziicWPiN+KcUK3GMk0/PDwZypdtTE/8phfgNTizSpNLg
+        o99M1Bz67weTkFYSBxMIxyUOtlKTi6eZOpoZcXCIucZ09OQi6WDZsdq6XbawOThhilli2sygx/M2bjXs
+        9n8bLiGl/gKyuBz/eucaewAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="buttonSuaCD.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAOsAAADrASts18IAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAClUlEQVRYR8WXO2/UQBSF5w8QfgKQl1MBJV1EkQ4EgpoKCvgD0GaBhgqyXikbiBQeEq8CiUCHhCgJ
+        QQS0SRAFokHaTZACoQDCJjncszsOflyvZ1c2HOmL7Dt37j2xx2uP0TTsY2SgjEuDZcwLDWFbQJdwTmOo
+        jFcDE7joXYNny6erfwq7BycwLRM3Q4XygjVvCH22XVQjV7FXBpdscpEs7qtgj23blncFu2SgFksskve8
+        2ra9Mfaya4mFMeRjqtWcC04CRdzzLJr9FQwbcXJZGczkxAPg83obHms5DpSM/OGjpg2mcuwe8O0ndvR9
+        Azj5UM/NYI4GvsSCHYk3D9SjiRUa2IoFU0lrHqgHE1s0oA0kyGoeqFsTTga4yFg40MYmUFuxJyIeMxaI
+        ua4LM9PAwSrwNfSfs9GZWWBmwQZEPGYsbGLtB3BA5mo1w2QaGL0JbNuiQXPG4wYYC5vgnNGZaC0Np1tQ
+        egE8/wScevQ3phkgzGHuuMwJYp1wXoRx0gx0S0cDXkWPE1cDnWoQ1QAXz9Iq8Fvu5/lnyXHiYuCCzGUN
+        PiX7J/Uc1cDpx7ay6G09OU5cDLxr2AQRa2o5qoFzT+0s0bJcCS2n+tomiCbn9RzODcSaWk7PBsbuAB/X
+        2ozd1nMKNeCCq4HEy+hsyMD6L+D4feDwre7gnPDPN2vG+witl9FqLIij8uLJW0fuRntY6obf7fEBzwcW
+        ZPXnpTdSSz79Ij1a+HhpuGlIDAiHpoEnH9q3oFdx7qzUYC2th3wMjxvuWOTk/32UUnLCHYuWVBiy9au2
+        mlP/fGPiYzmyMaG4XZLBxURy/tQSW7NAMtgnXBeaNjlPmrzsvNq2Xbq4OGRCSZgT6kKv2/M6HzWu9p0F
+        F5ExfwCl0hzzwUO9PgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="buttonXoaCD.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAOsAAADrASts18IAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAACLklEQVRYR+2Xy04UQRSG6wXER0CuDQ/gxsuG+ADIA7jWtxBxY2IiMz0kXNQEV5hASNSFS3BBADcm
+        jGNIjFE3g7CADZDQM/yev7t60l1zmsswrZv5k2/SU+ecv87UVKe7jKZBH0N9RUz0F/FZ2BFOBVwS1uwM
+        FLHZV8ATbxKetc9W7wyu9xfwUgprCaN2Qc85octOl9bQC9yQ4FebnCflnhK67bSRvGe4JoEtJzFPvnG1
+        7fTG2GXXEnNjwMdMODk3nAzk8Z+fR9BbwqCRTp4qwUzuvgY+/QJ+H6RZ/QnckZhWcwbjRj54q2lB3BbD
+        B8tp3m0jU4y5+bde6d6WDTaw5wyG3HsDHAXW+Qo6OgFG5pv9LX/YQN0ZDHn0wTq0QQ/FS5tDqLMBLYDh
+        KWCpAhxfYRVYuyge9NLmIJkNxFR2rVsLYq3mmaTTQEsN7B1G932sFbnmmKvcGiisA14JOKlFeH405iq3
+        Bp6vRTHucsJrjrnqNNBpILcG5r8AN+eA2mkErznm6qINqA+jmLLSAMVfHit5nRRrNc8E4cNo1xlM8f6M
+        5/95Yq3mmaBq+N6uBBrcXwCCunW8hFgzKrWaZwMf64aHBjWYYOwt8PE78GO/+VXMhTnMZY3mlaKAx4Yn
+        Fvny/15KKfnCE4uWlBty9JsOJ6f++cHERyV1MKF4XJJguSm5/Ww1Hc1iSbBLmBUCm9xOAi47V9tOly1u
+        DikYFzaEqtDq8bzKW427vbHhUjLmL8/XkWyWyaveAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="buttonThemCD.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAOsAAADrASts18IAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAABuElEQVRYR+2XXVLCMBDHcwHxCCpf5TDqmUR98Umh6Ag645teRUDHGUE9AiD6qC+I6/4hMLbdthFS
+        4YGd+TFpdpNd0myaVZLkXSpkynSQLVOT6TLfDP0RjOnmytTIlGjfOSFHTx8u6SqtZ0t0yQO/fk1kC8x5
+        waS0O68UjmmTlU/aOEnaWxXa0G7H4hzRGitaPsMkecFqa/dK6WWXDBMj51J15BwbjjuSeOdxDNIVyiuO
+        5FBQGuG4RPwHRJ0hRcU/SDVJGcnuDdH755gdbks2BtQRQN/XaUTtnqaCtmRjQA8BDH2dRlw9aO8saEs2
+        BgwRgKSIxVIAtApguQNAqp01iap3QR572jsL2pINxsalaGgAOGSQ4/PKG88RdViFBoBBNgLof8wYAMDy
+        zfMKThtE29fy3BOWexNGsQrAZgAL/xi9+jqNsPQ57ijc2wVFLEhRHDLI87hUC8WlW4WiQVQagANmritZ
+        ifYUKhZ+WNylFMIPqFgko8Tg0u985Bzy74WJS8+ewgSCcomV7YCxfVqB0mwirEwxNWagjW0ywLJjtbW7
+        cMHm4AFFps50mFnL8w5SDbt9uuE8otQPuyCv9euCVdcAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="buttonTimKiemCuDan.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        6gAAAOoB+Ss1JgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAMSSURBVFhHvZfN
+        b0xRGMbvP6D+BPQbERESGgsRrAQJCzsrS3+AhIW2SER8TKfVTqc0JSJYSCysEB8p/YiQtDQsiKbRVlWH
+        VpXp9PE+c8+tc2feeztjZjzJr+k9573veeZ83uNoqo6itqIJjZVN6BfGhAUBecJ3xqqa0FcRQUPNRdSY
+        9MEqj2F5ZQQd8uK8lahYMGdcKDPN+VV7ASul8rUJLiWDq5qxwjTrquYMlknFQEZgKRlib5vmHcd0uxZY
+        MqqiiKUb54STgpzHfHMc2HsD2Cds6dBjciRZ3oxqR5ycVCp9rG4BGh4DQxPI0tsvwOmnwFqJ0d5dgnpH
+        /nCpaZVpdl0D3n81rYXoYwLYfV3PEUIvDUxkFC7CxhNzpgVLLJv6aR4szfwC9sjQaLkCGKeBVEZhmjXS
+        pfYvTy0AXa+A7V1/Y7Z1AvEXwHzKBIlGvgPrWv25QkjRgFaBRhlzT2z8yD09jhy+6zdx/rkepxFo4N2k
+        ySbqfKnH2FzqN8GikW+yzJQYDdVA3WWTyYhdrcXZcEmypzzZQxWGamD/TZNFNDnrlh29D3QP69Q/cmP4
+        yz0duuPPGYRq4MAtk0U08cMtO/UEGBjX8cZ8WJaip4IMbL1isojYq3zW4mw2tctEtIZgRyFDQOwl2NKn
+        x9ice2aCReMzgGzxalwmgQbOdptsoqQssbAuPXgbmJs3waJcDHsEGuBmwk3F029pINLjdrUXszHmGrUb
+        T8gOuaHNnyuMQAOEp95s0mQ24jh/mJIhEuzNxxOngbcqciHUAOGSHJt2k4eJZ4M3B/MxsaQBsl66NNoL
+        fFKMcMJxF2S3H3uQvwkaUA8jDc7snVfdCUn4f+Zsz9NE+jD6nFFYMMcf5mxi1OF3u1JRMLYJnhH8tsiK
+        i6LH4aUhq6JI0ARXzbR8qNRp348RnHB4Y5GHUlxE0vBUDPh4dT9KKXngjUULKhly9WtLN07994tJFG98
+        FxOK1yWpHMwKLj4DWVczT1JZJrQLSRNcTJLsdva2aS5YnBzyQr3QK4wK/3o9H+VS42xfnHA+Oc4fjcUE
+        p8VlZNEAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
