--- a/QuanLyPhongTro/QuanLyChungCuKV.resx
+++ b/QuanLyPhongTro/QuanLyChungCuKV.resx
@@ -118,26 +118,90 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnLoad.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="buttonThem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
-        6QAAAOkBVJIUSwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAOBSURBVFhHvZdZ
-        b01RFMfPF1AfAZ1uTZEQQ0mUZ4JIeCDGCCJBIvGCB60hPKD33rY66WBqVTpotdUmxBQ6xNjJ+NziI1T9
-        rf/Z59wz7TtJaye/m7P3Wufstddae+27DV3LjSIvK4Jz2REMChPCHwFpwncmciIYyAqjKFSMkPX5+C2z
-        ArOzw6iWF3+7PjRd8JtVQoY1nbflXcNcEY5YyjPJ8LwSzLGmVS10GbNEMORTTIq4F8sq9bIkjNHb1vSG
-        YbldpxiXomdAx2eg5h3w6Buws1mvF4+cKCrMyZlwMpBWzA91ABeeO/1QFGgeBdbUePWSMJlZglxDLDmv
-        Ecagm9fXA0vKnbGmETWpW2/7feD0Y+9YChQa8sOtphNi412gR9wb7gMah4HSATWeigGU+3U09NOAX75B
-        EwmNOfnCUmfsZC9wvBs4KCG4+MIZD5UALWNOCPa0At1fgS5hb5ujp+EHDZjyDZrQ7cWycvdYnkxET/C5
-        8KmThJxshysJ2z6pBZBWMcwe1zBFA3QCM+YNQ96xdXXA9UGnH28b0igaRPjsl7uJawBhzOl2rrxAJmdI
-        Vt/Q67pZVKa2KeGzTscmoQGEMafby2Tl+SlMni5aA2j1PkkeJpA7CWeCgAErqoDe78CJHgXdvlzG/Hqp
-        wq1c914lLXeLXx4woPqtirfdZ+JVvfHqpMrSCrUVmajculdfB3UCBrCkpjKWClsaVSLafd13AgZcegns
-        anH6u6WouItOOsyX/GEIj3Qqzx6ThPbrBAzglrv9UdUAcuuDPnapslgS+vBDYMMdvTxggA1fJDrZdBLX
-        AJtNDeowOiUHDV2q09GRXw2sEnQyNwkN4KFyU0LAXcG60C61n/Vdp+vmyiugXrYe4bNOx4YGaA8jwqx1
-        H6nM6K33vDp+uGpObPf5nMAT5mH00zcYI5EBTMwzT9QE+x84On4DWIQSGDBu8H+7RmBCt/Nja2tVOHj8
-        2iHgKXegXZ2azJGjXc577hDoik+MKPoMXhq0QovNkoSRfrXaBa4kdBcVHsv+IsNVJ1i5IoyzBm8s0kn7
-        ItL5xakPBeKh2iTnvgb1p5RNOryx6JTisq1JVTmGgvV+ZZoHllz9ys3J2f77xSSKUc/FhI3XJREOB5Sn
-        n6HA1cxuIswQKoVJS3k6maTb6W1ruviNySEvFAr9wrjwr9fzcW41Znss4TzNMP4CL7yGwp1vOvAAAAAA
-        SUVORK5CYII=
+        6gAAAOoB+Ss1JgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAG4SURBVFhH7Zdd
+        UsIwEMdzAfEIKl/lMOqZRH3xSaHoCDrjm15FQMcZQT0CIPqoL4jr/iEwtt22EVLhgZ35MWl2k13SbJpV
+        kuRdKmTKdJAtU5PpMt8M/RGM6ebK1MiUaN85IUdPHy7pKq1nS3TJA79+TWQLzHnBpLQ7rxSOaZOVT9o4
+        SdpbFdrQbsfiHNEaK1o+wyR5wWpr90rpZZcMEyPnUnXkHBuOO5J453EM0hXKK47kUFAa4bhE/AdEnSFF
+        xT9INUkZye4N0fvnmB1uSzYG1BFA39dpRO2epoK2ZGNADwEMfZ1GXD1o7yxoSzYGDBGApIjFUgC0CmC5
+        A0CqnTWJqndBHnvaOwvakg3GxqVoaAA4ZJDj88obzxF1WIUGgEE2Auh/zBgAwPLN8wpOG0Tb1/LcE5Z7
+        E0axCsBmAAv/GL36Oo2w9DnuKNzbBUUsSFEcMsjzuFQLxaVbhaJBVBqAA2auK1mJ9hQqFn5Y3KUUwg+o
+        WCSjxODS73zkHPLvhYlLz57CBIJyiZXtgLF9WoHSbCKsTDE1ZqCNbTLAsmO1tbtwwebgAUWmznSYWcvz
+        DlINu3264Tyi1A+7IK/164JV1wAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="buttonCapNhat.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        6gAAAOoB+Ss1JgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAKVSURBVFhHxZc7
+        b9RAFIXnDxB+ApCXUwElXUSRDgSCmgoK+APQZoGGCrJeKRuIFB4SrwKJQIeEKAlBBLRJEAWiQdpNkAKh
+        AMImOdyzOw5+XK9nVzYc6YvsO3fuPbHHa4/RNOxjZKCMS4NlzAsNYVtAl3BOY6iMVwMTuOhdg2fLp6t/
+        CrsHJzAtEzdDhfKCNW8IfbZdVCNXsVcGl2xykSzuq2CPbduWdwW7ZKAWSyyS97zatr0x9rJriYUx5GOq
+        1ZwLTgJF3PMsmv0VDBtxclkZzOTEA+DzehseazkOlIz84aOmDaZy7B7w7Sd29H0DOPlQz81gjga+xIId
+        iTcP1KOJFRrYigVTSWseqAcTWzSgDSTIah6oWxNOBrjIWDjQxiZQW7EnIh4zFoi5rgsz08DBKvA19J+z
+        0ZlZYGbBBkQ8ZixsYu0HcEDmajXDZBoYvQls26JBc8bjBhgLm+Cc0ZloLQ2nW1B6ATz/BJx69DemGSDM
+        Ye64zAlinXBehHHSDHRLRwNeRY8TVwOdahDVABfP0irwW+7n+WfJceJi4ILMZQ0+Jfsn9RzVwOnHtrLo
+        bT05TlwMvGvYBBFrajmqgXNP7SzRslwJLaf62iaIJuf1HM4NxJpaTs8Gxu4AH9fajN3Wcwo14IKrgcTL
+        6GzIwPov4Ph94PCt7uCc8M83a8b7CK2X0WosiKPy4slbR+5Ge1jqht/t8QHPBxZk9eelN1JLPv0iPVr4
+        eGm4aUgMCIemgScf2regV3HurNRgLa2HfAyPG+5Y5OT/fZRScsIdi5ZUGLL1q7aaU/98Y+JjObIxobhd
+        ksHFRHL+1BJbs0Ay2CdcF5o2OU+avOy82rZdurg4ZEJJmBPqQq/b8zofNa72nQUXkTF/AKXSHPPBQ70+
+        AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="buttonLuu.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        6gAAAOoB+Ss1JgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAKYSURBVFhHvZfL
+        btNAFIbnBSiPAPTmbApPUQk2sASxALYg8Q4U2LDgkjiiLSAQFwkkQGUB5QWAXoIEUkJZsKOFtEUgARIS
+        Cu3h/PYMGY+P40lk80tf5MyZc86fyTjOKEnjIVVGanRutEYNZp3ZZqhPkLM+VqPlkSqdDa5QoMtna3iW
+        do5W6QYn/rEKFQVqXmeGdLukKpdpNwff6cll0tpTp126bazgAu3gQNOZWCbvsdq6vVJ62aWJpTEW0mzU
+        HBuOBwb6zg/dJzrISDEPOsN1Glfs5LwQzOXUM4q0zZx8Ks/xYErxC241KdiTm29iAxCupTkeLMHAF2fQ
+        i1uWAVxLczzYgIEtZ9CLggxswYAUyKUgA+RtYN9M8n0vA+7cXuQaqNSJGp/iRrff8v2rxyUDiGEOhJyA
+        c+1aErkGJu/GBY0etOJGrgGMIWZr8o5c0ybXQBASLazqilpoZD4phGu3OXL4R06saeO1B/ZOd78Go5+/
+        9QXLvoYwFzlSLRfvTThxNb0Skl5/LmgTXlogmv9AtP9edwwmFtd0J0Fu8wOc+5xrXHzVHXMRDRx5pCuy
+        XnxMxiZ4aSUT0id/yblGhx8mYwbRAB4uRiub6bhrImvZkWuU9cAayADAJptuxGRtuFIN+OBrIPUwsg2s
+        /ej++vUDcpBrlGEgehhtOoN09LHO0lr9TtTc6A/k2EJNtw/TVux02Q1gQ337pTML0FeuJe6TkBYVDg2p
+        AHPiSTEmUOP4XLp+RJXOKJxY+I34pxQrcYyTT88PBnKl21MT/ymF+A1OLNKk0uCj30zUHPrvB5OQVhIH
+        EwjHJQ62UpOLp5k6mhlxcIi5xnT05CLpYNmx2rpdtrA5OGGKWWLazKDH8zZuNez2fxsuIaX+ArK4HP96
+        5xp7AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        rAAAAKwBhgk01AAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAJaSURBVEhLrVXL
+        TlRBEJ1/0PkCEHWtJv4FxrjwETUxulG3PjYGMHHnBkYXPjcaXagYSDBEjRBcOkCUEMQQwQQXgnqZMWh8
+        DMdzpqeZfi28gyc5mZs+1VU91VVdBRftfSi29eIifyfIbyT+kbIdJ3vIYsOdDwr7yAqZcpCHlS192Ntw
+        a8BFOV9zjDbKWlsJe6zzIll1xFzcdQPoHgV234y0rOMyNhcaOQ/FdW6/Cpx+AtyfAl5+AEbmgWtl4Pgg
+        0FEC7nFd6J9J7O9Fd6G9hMlIaPDIY2Cxahyk8PYzML1kvhU84WNcKUpWSw//dm3NbBbefwWG3gGDs+Y7
+        xKuPsQ+yogCRcGyg6VzODj1qaqwQHOU/ezANOPEx9cn3YRkF2HaFTjOzSc53XPf188+NFmKW6XLtLKMA
+        ujyL/Q99TTzAtdVfRq/+BLIfwDwPpJSGtmIU4Pak2azTh1orjAKoJJdWgTNP/fVWmbzkvDz7DFjmoU4N
+        xdp/CWCL4tZErCUDXBoDFlbMBeoihe+/05d+kCVsofIO9WQAlVwK55gK124nS9iefu4LsJUl7upiMoCa
+        xkLNpKbSs6EmszZqPpWn8IdGaj7Xh6UCRC+p2j6ETqpnYniueWpBHX/hhb/f4YoCaHp5gh4uQQ/ZzLL5
+        TmGxAhzu9/cGLCuAxpwn6OkV7r4xaTnB7r7zGhhdAMYYXOsnWZJ6VsK9HkvoUgANHG9Uanh0jZhh4q7n
+        ZMYDbKpPNc1QLtQCg42wxmHTWXduoRlKIQsMW2EWObfQX9KYo1GZzDOnZVtWztfTUkeh8BcFjFKAS9Gm
+        9QAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="buttonTaiKhoan.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        rQAAAK0BVE7WMAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAALHSURBVEhLzZRb
+        TJJhHMY/s9JCMCHPshGCoiieE0+QaVIeWoky8rDUitIQzDvL2UHM6VpObVZamRmzdVrzotpnh5vW6KoL
+        b3VlXXhZXonA9/178XtbbYYCctHv9n2e39X7/Ak32BIen2vIrO37qjz31F5gfGaXafq+8GJz9OjNj4l4
+        z7ZEVfOn+oklqDc74NgDCqrGKThyl4KDw0vAVzRbnBkm6gWifK35uHl5jbx8lALVTQr2D65AWLp2Esc9
+        Zvehrve0K3nRDRqUQzRI9e8olOUxFQ/gRIrq6x7a1pXnDtCQ1W+H7SHCGlxzn/DEwo6N5Huv0ZDeRwNL
+        WNiBa+6zgxujrhxb3lCe1G0Ff3bkUVzziCC5Ydq+njy5F4Bf98KGsiym4iHhyaW9RQM/XMrjO39CkFhl
+        wnGv8AtLrZrMvji/Ri5qnwe2tGoC5zZHYAi/IELR9pZ/eHAxsmJokZtjfLOVHZWPn/9/+KFxefpYZeNz
+        WeWlD/Eq40fxgdYnu2JSWtFbFBPxAk6YQJWq7potN1lWT0XNJAVatIvq+xSo76Ft3HGAsuszLSq7MMvi
+        CYtxzS1YkmLdK83wHDRMOf4tR9uoGKOg7DY6ercoUFxdgIis2teou5NRuCY4U3vle+OUzW15ycjvjThA
+        UNr9DTlc3qWA1Mrz802PHB7L9w3ToBikIQ995eiSzjmni1H+RWyuZrTBbN2UXH7defxsEJxQPoa1mIAA
+        UUWPhd6s3DnEjH4a4s5aaKcT2wlCIFeP+EqehpYuQ0vnJKlHsJ4gJCUt076US3sAuHL9Y6wniFCx3KAd
+        X/aZXHJ5BQJjsnVYv4q/TNO74At5ggmAV2xyfld/Rv0H9p59uulMndkqbychu42ELCMJGQYS0lpJSNGT
+        kNxCgrSZhIQzJEhOkyA+RYLoJAnCEzMgaJqB6GqzlZPe9BK5uIySIH4BcZAhVIsg8xUAAAAASUVORK5C
+        YII=
 </value>
   </data>
 </root>
